--- a/app/src/main/res/layout/app_bar_profile.xml
+++ b/app/src/main/res/layout/app_bar_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowInvitations">
+    tools:context=".Profile">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_show_invitations" />
+    <include layout="@layout/content_profile" />
 
 </android.support.design.widget.CoordinatorLayout>
