--- a/app/src/main/res/layout/content_show_invitations.xml
+++ b/app/src/main/res/layout/content_show_invitations.xml
@@ -8,4 +8,12 @@
     tools:context=".ShowInvitations"
     tools:showIn="@layout/app_bar_show_invitations">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView_invitations"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
