--- a/app/src/main/res/layout/content_add_invitation.xml
+++ b/app/src/main/res/layout/content_add_invitation.xml
@@ -106,8 +106,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Participants"
-                android:inputType="textPersonName"
-                android:text="Name" />
+                android:inputType="textPersonName" />
         </LinearLayout>
 
         <LinearLayout
